fix footer alignment and size

--- a/_sass/basically-basic/_footer.scss
+++ b/_sass/basically-basic/_footer.scss
@@ -33,7 +33,7 @@
 
   img.site-logo{
     margin: -2px 2px 0 0;
-    width: 2em;
+    width: 3em;
     height: auto;
   }
 
@@ -44,6 +44,6 @@
     font-weight: 300;
     color: black;
     text-align: center;
-    @include fluid-type($min-vw, $max-vw, 10px, 15px);
+    @include fluid-type($min-vw, $max-vw, 11px, 16px);
   }
 }
